--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <div id=great>
         
       
-        <button type="button"><a id="qbox" href="https://www.youtube.com/channel/UCLBSp_S27grf3SC-Nv7_QmA?annotation_id=annotation_2019858019&feature=iv&src_vid=I_wjIy-vvQE&sub_confirmation=1">SUBSCRIBE</a></button>
+        <a id="qbox" href="https://www.youtube.com/channel/UCLBSp_S27grf3SC-Nv7_QmA?annotation_id=annotation_2019858019&feature=iv&src_vid=I_wjIy-vvQE&sub_confirmation=1">SUBSCRIBE</a>
       </div>
 
     </section>
