--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
   <body>
 
     <header>
-      <button type="button">HOME</button>
-      <button type="button">ABOUT</button>
-      <button type="button">VIDEOS</button>
-      <button type="button">SNEAK PEEKS</button>
+        <a id="qbox" href="https://www.youtube.com/channel/UCLBSp_S27grf3SC-Nv7_QmA?annotation_id=annotation_2019858019&feature=iv&src_vid=I_wjIy-vvQE&sub_confirmation=1">SUBSCRIBE</a>
+                <a id="qbox" href="https://www.youtube.com/channel/UCLBSp_S27grf3SC-Nv7_QmA?annotation_id=annotation_2019858019&feature=iv&src_vid=I_wjIy-vvQE&sub_confirmation=1">SUBSCRIBE</a>
+                <a id="qbox" href="https://www.youtube.com/channel/UCLBSp_S27grf3SC-Nv7_QmA?annotation_id=annotation_2019858019&feature=iv&src_vid=I_wjIy-vvQE&sub_confirmation=1">SUBSCRIBE</a>
+                <a id="qbox" href="https://www.youtube.com/channel/UCLBSp_S27grf3SC-Nv7_QmA?annotation_id=annotation_2019858019&feature=iv&src_vid=I_wjIy-vvQE&sub_confirmation=1">SUBSCRIBE</a>
 
     </header>
 
