--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>GHT Productions</title>
     <link rel="stylesheet" href="style.css">
+      <link href="favicon.ico"/>
   </head>
   <body>
 
