--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <header>
         <ul>
-        <il><a id="qbox" href="https://www.youtube.com/channel/UCLBSp_S27grf3SC-Nv7_QmA?annotation_id=annotation_2019858019&feature=iv&src_vid=I_wjIy-vvQE&sub_confirmation=1">Home</a></il>
+        <il><a id="qbox" href="home">Home</a></il>
                       <il><a id="qbox" href="https://www.youtube.com/channel/UCLBSp_S27grf3SC-Nv7_QmA?annotation_id=annotation_2019858019&feature=iv&src_vid=I_wjIy-vvQE&sub_confirmation=1">About</a></il>
                     <il><a id="qbox" href="https://www.youtube.com/channel/UCLBSp_S27grf3SC-Nv7_QmA?annotation_id=annotation_2019858019&feature=iv&src_vid=I_wjIy-vvQE&sub_confirmation=1">Videos</a></il>
                     <il><a id="qbox" href="https://www.youtube.com/channel/UCLBSp_S27grf3SC-Nv7_QmA?annotation_id=annotation_2019858019&feature=iv&src_vid=I_wjIy-vvQE&sub_confirmation=1">Sneak Peeks</a></il>
