--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </h2>
         
         <h2 style="color:white">
-          Hey guys, GHT Productions here. This is our official website. On it, we'll be posting everything from information about us to exclusive sneak peeks for upcoming videos. 
+          Hey guys, GHT Productions here. This is our official website, built, designed, and coded by members of GHT Productions. On it, we'll be everything from videos and informations about us to exclusive sneak peeks.
         </h2>
 
       </div>
