--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 
     <header>
         <ul>
-        <il><a id="qbox" href="home.html">Home</a></il>
-                      <il><a id="qbox" href="https://www.youtube.com/channel/UCLBSp_S27grf3SC-Nv7_QmA?annotation_id=annotation_2019858019&feature=iv&src_vid=I_wjIy-vvQE&sub_confirmation=1">About</a></il>
-                    <il><a id="qbox" href="https://www.youtube.com/channel/UCLBSp_S27grf3SC-Nv7_QmA?annotation_id=annotation_2019858019&feature=iv&src_vid=I_wjIy-vvQE&sub_confirmation=1">Videos</a></il>
-                    <il><a id="qbox" href="https://www.youtube.com/channel/UCLBSp_S27grf3SC-Nv7_QmA?annotation_id=annotation_2019858019&feature=iv&src_vid=I_wjIy-vvQE&sub_confirmation=1">Sneak Peeks</a></il>
+        <il><a  href="home.html">Home</a></il>
+                      <il><a href="https://www.youtube.com/channel/UCLBSp_S27grf3SC-Nv7_QmA?annotation_id=annotation_2019858019&feature=iv&src_vid=I_wjIy-vvQE&sub_confirmation=1">About</a></il>
+                    <il><a  href="https://www.youtube.com/channel/UCLBSp_S27grf3SC-Nv7_QmA?annotation_id=annotation_2019858019&feature=iv&src_vid=I_wjIy-vvQE&sub_confirmation=1">Videos</a></il>
+                    <il><a  href="https://www.youtube.com/channel/UCLBSp_S27grf3SC-Nv7_QmA?annotation_id=annotation_2019858019&feature=iv&src_vid=I_wjIy-vvQE&sub_confirmation=1">Sneak Peeks</a></il>
 </ul>
     </header>
 
@@ -33,7 +33,7 @@
         </h2>
         
         <h2 style="color:white">
-          Hey guys, GHT Productions here. This is our official website, built, designed, and coded by members of GHT Productions. On it, we'll be everything from videos and informations about us to exclusive sneak peeks.
+          Hey guys, GHT Productions here. This is our official website, built, designed, and coded by members of GHT Productions. On it, we'll be posting everything from videos and informations about us to exclusive sneak peeks for upcoming videos.
         </h2>
 
       </div>
