--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
   <body>
 
     <header>
-                    <iframe height="80px" width="300px" frameborder="0" src="https://akshatmittal.com/youtube-realtime/embed/#!/UCLBSp_S27grf3SC-Nv7_QmA" style="border: 0; width:300px; height:80px; background-color: #FFF;"></iframe>
+
         <ul>
-        <il><a  href="home.html">Home</a></il>
+        <il> <iframe height="80px" width="100px" frameborder="0" src="https://akshatmittal.com/youtube-realtime/embed/#!/UCLBSp_S27grf3SC-Nv7_QmA" style="border: 0; width:300px; height:80px; background-color: #FFF;"></iframe>
+            <a  href="home.html">Home</a></il>
                       <il><a href="https://www.youtube.com/channel/UCLBSp_S27grf3SC-Nv7_QmA?annotation_id=annotation_2019858019&feature=iv&src_vid=I_wjIy-vvQE&sub_confirmation=1">About</a></il>
                     <il><a  href="https://www.youtube.com/channel/UCLBSp_S27grf3SC-Nv7_QmA?annotation_id=annotation_2019858019&feature=iv&src_vid=I_wjIy-vvQE&sub_confirmation=1">Videos</a></il>
                     <il><a  href="https://www.youtube.com/channel/UCLBSp_S27grf3SC-Nv7_QmA?annotation_id=annotation_2019858019&feature=iv&src_vid=I_wjIy-vvQE&sub_confirmation=1">Sneak Peeks</a></il>
@@ -43,7 +44,7 @@
       
         <a id="qbox" href="https://www.youtube.com/channel/UCLBSp_S27grf3SC-Nv7_QmA?annotation_id=annotation_2019858019&feature=iv&src_vid=I_wjIy-vvQE&sub_confirmation=1">SUBSCRIBE</a>
       </div>
-
+                         
       </section>
 
 
