--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <il> 
             <a  href="index.html">Home</a></il>
                       <il><a href="about.html">About</a></il>
-                    <il><a  href="Videos">Videos</a></il>
-                    <il><a  href="sneak">Sneak Peeks</a></il>
+                    <il><a  href="Videos.html">Videos</a></il>
+                    <il><a  href="sneak.html">Sneak Peeks</a></il>
 </ul>
     </header>
 
