--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
       <link rel="icon" href="favicon.ico"/>
   </head>
-  <body>
+  <body background="background.png";>
 
     <header>
 
