--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <link rel="stylesheet" href="style.css">
       <link rel="icon" href="favicon.ico"/>
   </head>
-  <body background="background.png";>
-
+  <body background="background.png">
     <header>
 
         <ul>
@@ -28,7 +27,7 @@
         </div>
 
         <h1>
-          GHT Productions
+          <b>GHT Productions</b>
         </h1>  
         <h2 style=font-size:200%>
           <b>Gaming   Hacks   Tutorials</b>
