--- a/sneak.html
+++ b/sneak.html
@@ -28,7 +28,7 @@
         </div>
 
         <h1>
-          GHT Productions
+          <b>GHT Productions</b>
         </h1>  
         <h2 style=font-size:200%>
           <b>Gaming   Hacks   Tutorials</b>
