--- a/about.html
+++ b/about.html
@@ -37,8 +37,9 @@
         </h2>
           <font size="+5";>Content</font>
         <h2 style="color:white">
-              
+              At first, we posted mostly posted Clash Royale. Then came Agar.io and Slither.io. Nowadays, the channel is full of Diep.io with he occasional trolly video. Every once in a while we do DIYs and other homemade stuff.
         </h2>
+          <img src="crossbowagain.png" style="height: 300px;" />
       </div>
   
 
