--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
       <link rel="icon" href="favicon.ico"/>
   </head>
-  <body background="background.png";>
+  <body background="abstract.jpg">
 
     <header>
 
@@ -37,7 +37,7 @@
         </h2>
           <font size="+5";>Content</font>
         <h2 style="color:white">
-              At first, we posted mostly posted Clash Royale. Then came Agar.io and Slither.io. Nowadays, the channel is full of Diep.io with he occasional trolly video. Every once in a while we do DIYs and other homemade stuff.
+              At the beginning of this channel, we mostly posted Clash Royale and the occasional magic trick. After a while, Agar.io and Slither.io dominated our videos, and nowadays, GHT Productions is full of Diep.io.
         </h2>
           <img src="crossbowagain.png" style="height: 300px;" />
       </div>
