--- a/videos.html
+++ b/videos.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
       <link rel="icon" href="favicon.ico"/>
   </head>
-  <body background="background.png";>
+  <body>
 
     <header>
 
