--- a/about.html
+++ b/about.html
@@ -1,51 +1,85 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>GHT Productions</title>
-    <link rel="stylesheet" href="style.css">
-      <link rel="icon" href="favicon.ico"/>
-  </head>
-  <body background="abstract.jpg">
+<head>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <div id="header">
+    <header  style="background-color:black;">
 
-    <header>
 
-        <ul>
-        <il> 
-            <a  href="index.html">Home</a></il>
-                      <il><a href="about.html">About</a></il>
-                    <il><a  href="videos.html">Videos</a></il>
-                    <il><a  href="sneak.html">Sneak Peeks</a></il>
-</ul>
+      <ul>
+
+      <il> 
+          <a  href="index.html">Home</a></il>
+        <il><a href="about.html">Sneak Peeks</a></il>
+    <il> <a href= "about.html">About the Creators</a></il>
+        <il><a  href="GHTclan.html">[GHT]Clan</a></il>
+      </ul>
     </header>
 
-    <section>
-      <div id="name">
-        <div id="awesome">
-          
-        <img src="photo.jpg">
-        </div>
+    <div class="notfixed">
 
-        <h1>
-            <b>GHT Productions</b>
-        </h1>  
+    </div>
 
-        <font size="+10";>About</font>
-        <h2 style="color:white">
-              GHT Productions was founded on April 13, 2016 by Jason and Derek. After uploading its first video on April 15, the channel quickly grew and reached 100 subscribers May 10. On May 27, a new member named Elijah joined the group and GHT Productions went from a duo to a trio.
-        </h2>
-          <font size="+5";>Content</font>
-        <h2 style="color:white">
-              At the beginning of this channel, we mostly posted Clash Royale and the occasional magic trick. After a while, Agar.io and Slither.io dominated our videos, and nowadays, GHT Productions is full of Diep.io.
-        </h2>
-          <img src="crossbowagain.png" style="height: 300px;" />
+
+  <div class="title">
+
+
+    <h1>
+        About the Creators
+      </h1>
+      <div class="atc">
+        <h3>
+        GHT Productions was founded by Derek and Jason on April 13, 2016.<div id="moretext"> </div> It originally posted pranks and tutorials, but soon moved on to multiple <div id="moretext"> </div>games, and finally settling on Diep.io.<div id="moretext"> </div> [GHT]LIGAR joined the team on May 27, 2016 and made his debut with<div id="moretext"> </div> the most viewed video on GHT Productions at the time, showcasing his<div id="moretext"> </div> homemade crossbow. Jason, Derek and Ligar have worked together<div id="moretext"> </div> on GHT Productions to grow it into the channel it is today. As of now, <div id="moretext"> </div>they have over 4500 subscribers and 1.5 million total views.
+        </h3>
       </div>
-  
+    </div>        
+  </div>
+  <div class="developer">
+    <div class="derk">
+      <h2>
+        Derek (AKA [GHT]Derk)
+      </h2>
+      <ul>
+        <li>Co-Founder of GHT Productions</li>
+        <li>Thumbnail Maker</li>
+        <li>Video Idea Pitcher</li>
+        <li>Description/Tags Manager</li>
+        <li>Part-time Recorder</li>
+        <li>Full-Time Manager of [GHT] Discord Clan</li>
+      </ul>
+    </div>
+    <div class="person">
+      <h2>
+        Jason (AKA [GHT]Person)
+      </h2>
+      <ul>
+        <li>Co-Founder of GHT Productions</li>
+        <li><b>MLG EDITOR >:D</b></li>
+        <li>Part-Time Thumbnail Maker</li>
+        <li>Part-Time Description/Tags Manager</li>
+        <li>Part-time Recorder</li>
+        <li>Full-Time Manager of [GHT] Discord Clan</li>
+      </ul>
+    </div>
+    <div class="ligar">
+      <h2>
+        [GHT]LIGAR
+      </h2>
+      <ul>
+        <li>Main Recorder </li>
+        <li>Versatile Diep.io Player </li>
+        <li>Light Editor</li>
+        <li>Part-Time Manager of [GHT] Discord Clan</li>
+      <li>Livestreamer</li>
+        <li>World Record Holder</li>
+      </ul>
+    </div>
+  </div>
 
-                         
-      </section>
 
 
-  </body>
+
+</body>
 </html>
